--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,7 @@ cmake-build-debug/
 
 # IntelliJ
 /out/
+.idea/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -198,3 +199,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/java,eclipse,macos,windows,intellij
+.idea/inspectionProfiles/
